modified:   package-lock.json 	modified:   package.json 	modified:   src/App.js 	new file:   src/Calendar/conts.js 	new file:   src/Calendar/index.js 	new file:   src/Calendar/styled.js 	new file:   src/Calendar/utils.js 	new file:   src/Edge/Edge.css 	modified:   src/Edge/Edge.js 	new file:   src/Edge/NewBrunswick.js 	new file:   src/Edge/Newfoundland.js 	new file:   src/Edge/Northwest.js 	new file:   src/Edge/NovaScotia.js 	new file:   src/Edge/Nunavut.js 	new file:   src/Edge/PrinceEdward.js 	new file:   src/Edge/Saskatchewan.js 	new file:   src/Edge/Yukon.js 	modified:   src/Quad/Quad.js 	renamed:    src/Quad/Quad1.css -> src/Quad/Quad1.module.css 	renamed:    src/Quad/Quad2.css -> src/Quad/Quad2.module.css 	renamed:    src/Quad/Quad3.css -> src/Quad/Quad3.module.css 	modified:   src/Randomizer/RndAStyleA.css 	modified:   src/Randomizer/RndAStyleB.css 	modified:   src/Randomizer/RndAStyleC.css

--- a/src/Quad/Quad1.module.css
+++ b/src/Quad/Quad1.module.css
@@ -55,7 +55,7 @@ body {
   margin-top: 20px;
 }
 
-.button-button {
+.buttonButton {
   padding: 10px 20px;
   border: none;
   background-color: #007bff;
@@ -66,22 +66,22 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.button-button:hover {
+.buttonButton:hover {
   background-color: #0056b3;
 }
 
-.button-button:active {
+.buttonButton:active {
   opacity: 0.4;
 }
 
-.equation-display, .discr, .roots, .viete {
+.equationDisplay, .discr, .roots, .viete {
   background-color: #e9ecef;
   border-radius: 5px;
   padding: 10px;
   margin-top: 10px;
 }
 
-h3, .equation-display, .discr, .roots, .viete {
+h3, .equationDisplay, .discr, .roots, .viete {
   font-size: 18px;
   font-weight: normal;
   line-height: 1.5;
@@ -93,7 +93,7 @@ h3, .equation-display, .discr, .roots, .viete {
     margin: 5px 0;
   }
 
-  .button-button {
+  .buttonButton {
     width: 100%;
     margin-top: 10px;
   }
