--- a/src/Quad/Quad2.module.css
+++ b/src/Quad/Quad2.module.css
@@ -52,7 +52,7 @@
     border: 1px solid #007763;
   }
   
-  .button-button {
+  .buttonButton {
     padding: 10px 20px;
     border: none;
     background-color: #009688;
@@ -64,17 +64,17 @@
     transition: background-color 0.3s ease, transform 0.3s ease;
   }
   
-  .button-button:hover {
+  .buttonButton:hover {
     background-color: #00796b;
     transform: scale(1.05);
   }
 
-  .button-button:active {
+  .buttonButton:active {
     opacity: 0.8;
   }
   
-  .equation-display, .discr, .roots, .viete {
-    background-color: #e0f2f1;
+  .equationDisplay, .discr, .roots, .viete {
+    background-color: #64a7a3;
     border-radius: 5px;
     padding: 10px;
     margin-top: 10px;
@@ -82,7 +82,7 @@
     display: inline-block;
   }
   
-  h3, .equation-display, .discr, .roots, .viete {
+  h3, .equationDisplay, .discr, .roots, .viete {
     font-size: 16px;
     font-weight: 600;
     line-height: 1.4;
@@ -99,7 +99,7 @@
       margin: 5px 0;
     }
   
-    .button-button {
+    .buttonButton {
       width: 100%;
       margin-top: 10px;
     }
