--- a/src/Quad/Quad.module.css
+++ b/src/Quad/Quad.module.css
@@ -2,8 +2,8 @@
   max-width: 600px;
   margin: 20px auto;
   padding: 20px;
-  background-color: #4e4e4e;
-  color: #f5f5f5;
+  background-color: #e2ebf3;
+  color: #000000;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   font-weight: bold;
@@ -76,10 +76,10 @@ input:checked + .sliderRound:before {
   width: 60px;
   padding: 5px;
   margin: 5px;
-  border: 1px solid #4a4a4a;
+  border: none;
   border-radius: 5px;
-  background-color: #333;
-  color: #f5f5f5;
+  background-color: #ffffff;
+  color: #000000;
   font-weight: bold;
 }
 
@@ -90,7 +90,7 @@ input:checked + .sliderRound:before {
 
 .buttonButton {
   padding: 10px 20px;
-  background-color: #f39c12;
+  background-color: #00a2ff;
   border: none;
   border-radius: 5px;
   color: #1a1a1a;
@@ -101,7 +101,7 @@ input:checked + .sliderRound:before {
 }
 
 .buttonButton:hover {
-  background-color: #e67e22;
+  opacity: 0.9;
 }
 
 .buttonButton:active {
@@ -116,12 +116,12 @@ input:checked + .sliderRound:before {
   display: block;
   text-align: center;
   margin-top: 20px;
-  background-color: #636363;
+  background-color: #b6d6ec;
   max-width: 50%;
   padding: 10px;
   margin: 2px auto;
   border-radius: 5px;
-  color: #ffffff;
+  color: #010050;
   font-weight: bold;
   width: auto;
 }
