--- a/src/Milim/Milim.css
+++ b/src/Milim/Milim.css
@@ -1,152 +1,4 @@
-.container {
-    position: relative;
-    min-height: 100vh;
-}
-
-.Milim {
-    text-align: center;
-}
-
-.input {
-    margin-top: 5px;
-    height: 60px;
-    width: 30%;
-    min-width: 300px;
-    font-size: 32px;
-    font-weight: bold;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.input::placeholder {
-    color: rgb(190, 190, 190);
-}
-
-.word {
-    color: rgb(42, 42, 189);
-}
-
-.click-button {
-    margin-right: 5px;
-    margin-left: 5px;
-    background-color: rgb(17, 17, 133);
-    width: auto;
-    border: none;
-    color: rgb(224, 240, 240);
-    padding: 12px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    font-weight: bold;
-    border-radius: 24px;
-    cursor: pointer;
-}
-
-.click-button:hover {
-    opacity: 70%;
-}
-
-.click-button:active {
-    opacity: 40%;
-}
-
-.language-switch {
-    position: absolute;
-    bottom: 30px;
-    left: 5px;
-}
-
-.language-switch-button {
-    margin: 10px 10px;
-    background-color: rgb(17, 17, 133);
-    border: none;
-    color: rgb(224, 240, 240);
-    padding: 12px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 24px;
-    cursor: pointer;
-}
-
-.language-switch-button:hover {
-    opacity: 70%;
-}
-
-.language-switch-button:active {
-    opacity: 40%;
-}
-
-.button-div {
-    margin-top: 10px;
-}
-
-.h3 {
-    margin-top: 10px;
-    margin-bottom: 5px
-}
-
-#message {
-    font-weight: bold;
-    font-size: 22px;
-    color: green;
-}
-
-.milim-results {
-    margin: 10px auto;
-    text-align: center;
-    background-color: rgb(67, 55, 231);
-    padding: 16px;
-    border-radius: 16px;
-    color: rgb(224, 240, 240);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, 
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-    width: 40%;
-    height: auto;
-}
-
-.center {
-    text-align: center;
-}
-
-.select-difficulty {
-    position: absolute;
-    z-index: 1000;
-    margin-left: 10px;
-    margin-top: 10px;
-    border: solid 1px;
-    border-radius: 5px;
-    padding: 12px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-#orange {
+.orange {
     color: rgb(255, 94, 0);
-    font-size: 28px; 
-}
-
-#pronunciation {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-#pronunciation:hover {
-    opacity: 70%;
-}
-
-#hidden {
-    font-weight: bold;
-    font-size: 22px;
-}
-
-#italic {
-    font-style: italic;
-}
+    font-size: 28px;
+  }
