--- a/src/Randomizer/RndAStyleA.module.css
+++ b/src/Randomizer/RndAStyleA.module.css
@@ -1,3 +1,6 @@
+.container
+    
+
 .main {
     display: flex;
     align-items: center;
@@ -12,7 +15,7 @@
     font-size: 26px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 20px;
+    width: 50px;
   }
   
   .input:focus {
