--- a/src/Solubility/style2.module.css
+++ b/src/Solubility/style2.module.css
@@ -1,4 +1,4 @@
-.app-container.style2 table {
+/* .app-container.style2 table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0 10px;
@@ -90,5 +90,53 @@
     border-width: 5px;
     border-style: solid;
     border-color: #333 transparent transparent transparent;
+  } */
+  
+  .appContainer {
+    padding: 20px;
+    background-color: #f9f9f9;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+  }
+  
+  th,
+  td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .anionColumn {
+    width: 200px;
+    text-align: left;
+  }
+  
+  td.equalWidth {
+    width: calc((100% - 200px) / 20); /* Adjust the width for even columns */
+  }
+  
+  .clickable {
+    cursor: pointer;
+  }
+  
+  .clickable:hover {
+    background-color: #f1f1f1;
+  }
+  
+  tbody tr:hover {
+    background-color: #f9f9f9;
+  }
+  
+  tbody td:hover {
+    background-color: #e2e2e2;
   }
   
