modified:   src/Edge/NewBrunswick.js 	modified:   src/Edge/Provinces.module.css 	modified:   src/Main/Main.js

--- a/src/Edge/Provinces.module.css
+++ b/src/Edge/Provinces.module.css
@@ -102,5 +102,36 @@
     height: 400px;
     border-radius: 8px;
   }
+
+  .nb1 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .nb2 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .nb3 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .nb4 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .nb5 {
+    height: 240px;
+    border-radius: 8px;
+  }
+
+  .nb6 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
   
   
