--- a/src/Edge/Provinces.module.css
+++ b/src/Edge/Provinces.module.css
@@ -6,7 +6,7 @@
   
   .innerContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(410px, 1fr));
     gap: 16px;
     padding: 16px;
   }
@@ -64,12 +64,12 @@
   }
 
   .nl5 {
-    height: 320px;
+    height: 370px;
     border-radius: 8px;
   }
 
   .nl6 {
-    height: 240px;
+    height: 270px;
     border-radius: 8px;
   }
 
@@ -132,6 +132,68 @@
     height: 400px;
     border-radius: 8px;
   }
+
+  .nunavut1 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .nunavut2 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .nunavut3 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .nunavut4 {
+    height: 230px;
+    border-radius: 8px;
+  }
+
+  .nunavut5 {
+    height: 300px;
+    border-radius: 8px;
+  }
+
+  .nunavut6 {
+    height: 230px;
+    border-radius: 8px;
+  }
+
+  .novasc1 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .novasc2 {
+    height: 270px;
+    border-radius: 8px;
+  }
+  
+  .novasc3 {
+    height: 270px;
+    border-radius: 8px;
+  }
+  
+  .novasc4 {
+    height: 400px;
+    border-radius: 8px;
+  }
+  
+  .novasc5 {
+    height: 400px;
+    border-radius: 8px;
+  }
+  
+  .novasc6 {
+    height: 400px;
+    border-radius: 8px;
+  }
+  
+  
 
   
   
