--- a/src/Edge/Provinces.module.css
+++ b/src/Edge/Provinces.module.css
@@ -193,7 +193,100 @@
     border-radius: 8px;
   }
   
+  .yukon1 {
+    height: 230px;
+    border-radius: 8px;
+  }
+  
+  .yukon2 {
+    height: 230px;
+    border-radius: 8px;
+  }
+  
+  .yukon3 {
+    height: 230px;
+    border-radius: 8px;
+  }
+  
+  .yukon4 {
+    height: 400px;
+    border-radius: 8px;
+  }
+  
+  .yukon5 {
+    height: 225px;
+    border-radius: 8px;
+  }
+  
+  .yukon6 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .sask1 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .sask2 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .sask3 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .sask4 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .sask5 {
+    height: 220px;
+    border-radius: 8px;
+  }
+
+  .sask6 {
+    height: 400px;
+    border-radius: 8px;
+  }
+
+  .pei1 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .pei2 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .pei3 {
+    height: 270px;
+    border-radius: 8px;
+  }
+
+  .pei4 {
+    height: 230px;
+    border-radius: 8px;
+  }
+
+  .pei5 {
+    height: 230px;
+    border-radius: 8px;
+  }
+
+  .pei6 {
+    height: 230px;
+    border-radius: 8px;
+  }
+
   
 
+  
+  
+  
   
   
