--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -75,10 +75,18 @@
     height: 80px;
     border: 1px solid #ccc;
     border-radius: 10px;
+    background-color: rgba(125, 164, 185, 0.1);
     transition: transform 0.2s, background-color 0.2s;
   }
   
   .project:hover {
-    background-color: rgba(39, 86, 129, 0.1);
+    background-color: rgba(20, 76, 129, 0.1);
+  }
+
+  .bgAttribution {
+    font-size: 12px;
+    text-align: right;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
   
