--- a/src/Milim/Milim.module.css
+++ b/src/Milim/Milim.module.css
@@ -3,19 +3,25 @@
     min-height: 100vh;
 }
 
+.header {
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 2px;
+}
+
 .milim {
     text-align: center;
 }
 
 .input {
-    margin-top: 5px;
-    height: 60px;
-    width: 30%;
+    margin-top: 0px;
+    height: 40px;
+    width: 25%;
     min-width: 300px;
-    font-size: 32px;
+    font-size: 24px;
     font-weight: bold;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 6px;
 }
 
 .input::placeholder {
@@ -24,6 +30,8 @@
 
 .word {
     color: rgb(42, 42, 189);
+    margin-top: 2px;
+    margin-bottom: 10px;
 }
 
 .clickButton {
@@ -34,13 +42,13 @@
     width: auto;
     border: none;
     color: rgb(224, 240, 240);
-    padding: 12px;
+    padding: 9px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 22px;
+    font-size: 14px;
     font-weight: bold;
-    border-radius: 24px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
@@ -63,13 +71,13 @@
     background-color: rgb(17, 17, 133);
     border: none;
     color: rgb(224, 240, 240);
-    padding: 12px;
+    padding: 9px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
-    border-radius: 24px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
