--- a/src/Quad/Quad1.module.css
+++ b/src/Quad/Quad1.module.css
@@ -7,7 +7,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   font-weight: bold;
-  /* text-align: center; */
+  width: 85%;
 }
 
 .switch {
@@ -61,6 +61,23 @@ input:checked + .sliderRound:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.sliderRound:after {
+  content: '\263E';
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #FFD700;
+}
+
+.input:checked + .sliderRound:after {
+  content: '\263E';
+  left: 10px;
+  right: auto;
+  color: #FFFFE0;
 }
 
 .header {
